# grahmos-interactive-demo

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  PHASE2_DEPLOYMENT_READINESS.md  QA_PHASE2_DELIVERABLE_SUMMARY.md  README.md  SPRINT1_TEST_SIMULATION_RESULTS.md  netlify.toml
.github/workflows/: deploy-maps.yml  phase2-testing-integration.yml  quality-gates.yml
benchmarks/: Cargo.toml
benchmarks/benches/: consensus_benchmarks.rs  storage_benchmarks.rs
docker/mobile-testing/: docker-compose.yml
docker/mobile-testing/network-configs/: network-profiles.json
docker/mobile-testing/test-collector/: test-collector.js
docs/: ANIMATION_UPDATES_v1.3.md  BUG_FIXES_v1.1.1.md  CONTINUOUS_ALIGNMENT_FRAMEWORK.md  DEMO_UPDATES_v1.2.1.md  DEPLOYMENT_GUIDE.md  EmergencyMapComponent.jsx  FRICTIONLESS_DEMO_v1.3.0.md  IMPLEMENTATION_GUIDE.md  INVESTOR_DEMO_FLOW.md  INVESTOR_DEMO_QUICK_START.md  LAYERS_1_2_COMPLETE.md  LEAFLET_INTEGRATION_GUIDE.md  MAPS_INTEGRATION_SUMMARY.md  PLATFORM_CONSISTENCY_CHECK.md  PRD_Technical_Validation.md  QA_DELIVERABLES_SUMMARY.md  ROADMAP.md  STACK_INTEGRATION_PLAN.md  TESTING_STRATEGY.md  demo-intro.html  demo-summary.html  emergency-maps-v2.html  emergency-maps.backup.html  emergency-maps.html  enterprise-resilience-demo.html  index.html  netlify.toml  sw.js
docs/api/: API_RESILIENCE_TESTING_ALIGNMENT.md  API_UX_Specification.md
docs/architecture/: SUB_AGENT_SPAWNING_FRAMEWORK.md
docs/coordination/: Daily_Sprint_Coordination_Protocol.md
docs/enterprise/: ENTERPRISE_INTEGRATION_DEEPDIVE.md
docs/integration/: PHASE2_Integration_Plan.md  PM_Phase2_Assignments.md  QA_Phase2_Assignments.md  QA_Resilience_Implementation_Plan.md  Risk_Mitigation_Strategies.md
docs/mobile/: MOBILE_P2P_OFFLINE_ARCHITECTURE.md
docs/qa/: Failure_Reporting_Workflow.md
docs/quality/: QUALITY_GATE_CONFIG.md
docs/reports/: EXECUTIVE_VALIDATION_SUMMARY.md  PM_STATUS_REPORT_TO_CTO.md
docs/sprint/: SPRINT1_DETAILED_PLANNING.md
docs/stakeholder/: MVP_DEVELOPMENT_UPDATE.md
docs/technical/: Architecture_Validation_Final.md  Development_Environment_Setup.md  Performance_Security_Standards.md  Sprint_1_Technical_Planning.md  SubAgent_Spawning_Framework.md  Team_Assembly_Validation.md  Technical_Feasibility_Validation.md
docs/ux/: Offline_First_UX_Patterns.md  UX_Specifications.md
docs/validation/: CTO_VALIDATION_REQUEST.md
monitoring/: INSTALL_CRON.md  generate_dashboard_data.sh  prism-monitoring.crontab
monitoring/alerts/: config.env.example  send_alert.sh
monitoring/cron/: api_contract_check.sh  compliance_audit_check.sh  mobile_p2p_check.sh  performance_sla_check.sh
scripts/: check_monitoring_status.sh  deploy_testing_infrastructure.sh  execute_sprint1_tests.sh  mobile_test_control.sh  setup_automated_monitoring.sh  setup_mobile_p2p_environment.sh
src/api/rest/: Cargo.toml
src/consensus/: Cargo.toml
src/consensus/src/: lib.rs
src/core/: communication.rs  error.rs
src/core/swarm/: Cargo.toml
src/core/swarm/src/: lib.rs  swarm_manager.rs
src/grahmos/: Cargo.toml
src/grahmos/src/: lib.rs
src/network/p2p/: Cargo.toml
src/network/p2p/src/: lib.rs
src/storage/cas/: Cargo.toml
src/storage/cas/src/: compression.rs  encryption.rs  integrity.rs  lib.rs
src/storage/crdt/: Cargo.toml
src/storage/crdt/src/: grow_only_counter.rs  grow_only_set.rs  lib.rs  lww_register.rs  or_set.rs  pn_counter.rs  rga.rs  sync.rs  two_phase_set.rs  vector_clock.rs
tests/api/: contract_tests.rs  openapi-resilience.yaml  openapi.yaml  resilience_contract_tests.py  sdk_integration.rs  sdk_resilience_tests.rs
tests/chaos/: Cargo.toml
tests/chaos/src/: lib.rs
tests/compliance/: encryption_stress_tests.rs  rbac_tests.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/mobile/: Cargo.toml  network_simulator.py  network_switching_tests.rs  p2p_coordinator.rs
tests/performance/: sla_validation.rs
tests/reporting/: dashboard_integration.rs
tests/scripts/: validate_sla_compliance.py
tests/unit/: Cargo.toml
tests/unit/src/: consensus_tests.rs  crdt_tests.rs  error_tests.rs  lib.rs  storage_tests.rs
