[package]
name = "prism-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bench]]
name = "storage_benchmarks"
harness = false

[[bench]]
name = "consensus_benchmarks"
harness = false

[[bench]]
name = "crdt_benchmarks"
harness = false

[[bench]]
name = "network_benchmarks"
harness = false

[dependencies]
# Core PRISM crates
prism-crdt = { path = "../src/storage/crdt" }
prism-consensus = { path = "../src/consensus" }
prism-cas = { path = "../src/storage/cas" }
prism-p2p = { path = "../src/network/p2p" }

# Benchmarking framework
criterion = { workspace = true, features = ["html_reports"] }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tokio-test.workspace = true

# Data generation
rand = "0.8"
fake = "2.8"

# System monitoring
sysinfo = "0.29"

# Utilities
tempfile.workspace = true
uuid.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true