[package]
name = "prism-consensus"
version = "0.1.0"
edition = "2021"
description = "Raft-based consensus for PRISM agent swarm coordination"
authors = ["PRISM Team"]

[dependencies]
# Async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time and duration handling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.5", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Cryptographic hashing
blake3 = "1.5"

# Networking for consensus
libp2p = { version = "0.53", features = ["gossipsub", "identify", "noise", "tcp"] }

# Data structures
dashmap = "5.5"
im = "15.1"

# Randomization for timeouts
rand = "0.8"

# Storage for persistent log
rocksdb = "0.21"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
pretty_assertions = "1.4"

[features]
default = ["rocksdb-storage"]

# Use RocksDB for persistent log storage
rocksdb-storage = []

# In-memory storage for testing
memory-storage = []

# Development and debugging features
dev-tools = []