[package]
name = "prism-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Core PRISM crates
prism-crdt = { path = "../../src/storage/crdt" }
prism-consensus = { path = "../../src/consensus" }
prism-cas = { path = "../../src/storage/cas" }
prism-p2p = { path = "../../src/network/p2p" }
prism-swarm = { path = "../../src/core/swarm" }

# Async runtime
tokio = { workspace = true, features = ["test-util", "macros", "time", "rt-multi-thread"] }
tokio-test.workspace = true
futures.workspace = true

# Testing framework
testcontainers = "0.15"
tempfile.workspace = true
uuid.workspace = true

# Network testing
libp2p.workspace = true
multiaddr.workspace = true

# Metrics and observability
prometheus.workspace = true
metrics.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Additional testing utilities
criterion.workspace = true
pretty_assertions = "1.4"
serial_test = "3.0"