[package]
name = "prism-unit-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Core PRISM crates for testing
prism-crdt = { path = "../../src/storage/crdt" }
prism-consensus = { path = "../../src/consensus" }
prism-cas = { path = "../../src/storage/cas" }
prism-p2p = { path = "../../src/network/p2p" }
prism-core-error = { path = "../../src/core", package = "prism-core" }

# Async runtime and testing
tokio = { workspace = true, features = ["test-util", "time"] }
tokio-test.workspace = true
futures.workspace = true

# Testing utilities
criterion.workspace = true
tempfile.workspace = true
mockall.workspace = true
serial_test = "3.0"
proptest = "1.4"
quickcheck = "1.0"

# Logging and debugging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-test = "0.2"

# Serialization testing
serde_json.workspace = true
bincode.workspace = true

# Networking testing
tokio-util.workspace = true

# Data structures for testing
uuid.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# Additional test utilities
pretty_assertions = "1.4"
test-log = "0.2"
rstest = "0.18"

[dev-dependencies]
# Additional development dependencies for tests
once_cell = "1.19"
lazy_static = "1.4"