[package]
name = "prism-rest-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Core PRISM components
prism-core-swarm = { path = "../../core/swarm" }
prism-storage-cas = { path = "../../storage/cas" }
prism-network-p2p = { path = "../../network/p2p" }

# Web framework and HTTP
warp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true

# WebSocket support
tokio-tungstenite.workspace = true
futures.workspace = true

# Error handling and logging
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# UUID and time handling
uuid.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# Metrics and monitoring
prometheus.workspace = true
metrics.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
criterion.workspace = true