[package]
name = "prism-swarm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "PRISM Agent Swarm Core - P2P mesh coordination and lifecycle management"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Agent-specific dependencies
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.0"  # Concurrent HashMap for agent registry

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }