[package]
name = "prism-cas"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "PRISM Content-Addressable Storage - BLAKE3 hashing with deduplication"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Storage backend
rocksdb = { workspace = true }

# Hashing and integrity
blake3 = { workspace = true }
merkletree = { workspace = true }

# Compression
zstd = { workspace = true }

# Encryption (optional)
aes-gcm = { workspace = true }
ring = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }