[package]
name = "prism-crdt"
version = "0.1.0"
edition = "2021"
description = "Conflict-Free Replicated Data Types for PRISM distributed system"
authors = ["PRISM Team"]

[dependencies]
# Serialization and data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time and versioning for CRDT operations
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.5", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and instrumentation
tracing = "0.1"
tracing-subscriber = "0.3"

# Hashing for content addressing
blake3 = "1.5"

# Networking for CRDT sync
libp2p = { version = "0.53", features = [
    "gossipsub", 
    "identify", 
    "noise",
    "tcp",
    "mdns",
    "kad",
    "macros"
] }

# Data structures for efficient CRDT operations
dashmap = "5.5"  # Concurrent hashmap
im = "15.1"      # Persistent immutable data structures
roaring = "0.10" # Compressed bitmaps for efficient sets

# Optional encryption for secure CRDT sync
chacha20poly1305 = { version = "0.10", optional = true }
aes-gcm = { version = "0.10", optional = true }

# Mathematical operations for vector clocks
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
pretty_assertions = "1.4"
proptest = "1.4"  # Property-based testing for CRDT laws

[features]
default = ["json-api"]

# Enable JSON-based API for easier integration
json-api = []

# Encryption features
encryption = ["chacha20poly1305", "aes-gcm"]

# Enable advanced CRDT types
advanced-crdts = []

# Enable network synchronization
network-sync = []

# Development features
dev-tools = []

[[example]]
name = "basic_crdt"
path = "examples/basic_crdt.rs"

[[example]]
name = "distributed_counter"
path = "examples/distributed_counter.rs"

[[example]]
name = "collaborative_text"
path = "examples/collaborative_text.rs"